--- a/index.html
+++ b/index.html
@@ -1,70 +1,181 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- MAINTAIN: Fancy Pony - single-file upload page wired to Google Apps Script -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Artwork Submission</title>
+  <title>Fancy Pony</title>
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif;max-width:560px;margin:40px auto;padding:0 16px}
-    .card{border:1px solid #ddd;border-radius:12px;padding:16px}
-    label{display:block;margin:10px 0 6px;font-weight:600}
-    input[type=text],input[type=email],textarea{width:100%;padding:10px;border:1px solid #ccc;border-radius:10px}
-    input[type=file]{margin:8px 0 12px}
-    button{padding:10px 16px;border:1px solid #ddd;border-radius:10px;background:#fff;cursor:pointer}
-    .status{min-height:20px;margin-top:10px}
+    /* MAINTAIN: minimal, accessible, print-safe styles */
+    :root { --w: 720px; --bd:#e5e7eb; --fg:#111827; --muted:#6b7280; --accent:#111827; }
+    * { box-sizing: border-box; }
+    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); margin:0; }
+    .wrap { max-width: var(--w); margin: 40px auto; padding: 0 16px; }
+    .card { border:1px solid var(--bd); border-radius:16px; padding:20px; box-shadow:0 1px 3px rgba(0,0,0,.04); }
+    h1 { margin:0 0 12px; font-size:28px; letter-spacing:.2px; }
+    .sub { color:var(--muted); margin:0 0 16px; }
+    .row { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
+    label { display:block; margin:12px 0 6px; font-weight:600; }
+    input[type=text], input[type=email], textarea {
+      width:100%; padding:10px; border:1px solid var(--bd); border-radius:10px; font:inherit;
+    }
+    input[type=file]{ margin:8px 0 12px; }
+    textarea { resize: vertical; }
+    .muted { color:var(--muted); font-size:13px; }
+    .actions { display:flex; flex-wrap:wrap; gap:10px; margin-top:14px; }
+    button, .btn {
+      appearance:none; border:1px solid var(--bd); background:#fff; color:var(--fg);
+      padding:10px 16px; border-radius:10px; cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px;
+    }
+    button.primary { background:var(--accent); color:#fff; border-color:var(--accent); }
+    .status { margin-top:12px; min-height:22px; }
+    .count { font-weight:600; margin: 4px 0 18px; }
+    .badge { display:inline-block; padding:2px 8px; border:1px solid var(--bd); border-radius:999px; font-size:12px; color:var(--muted); }
+    .hr { height:1px; background:var(--bd); margin:18px 0; }
+    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
+    code.small { background:#f9fafb; border:1px solid var(--bd); padding:2px 6px; border-radius:6px; font-size:12px; }
+    .hint { font-size:13px; color:var(--muted); }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h2>Artwork Submission</h2>
-    <p id="count">Loading count…</p>
+  <div class="wrap">
+    <div class="card" role="region" aria-label="Fancy Pony Submission">
+      <h1>Fancy Pony</h1>
+      <p class="sub">Artwork Submission</p>
+      <div class="count">
+        <span id="count" class="badge">Loading total…</span>
+      </div>
 
-    <form id="form" enctype="multipart/form-data">
-      <label>Name <input name="name" required></label>
-      <label>Class <input name="class" required></label>
-      <label>Title <input name="title" required></label>
-      <label>Description <textarea name="description" rows="3"></textarea></label>
-      <label>Email (optional) <input type="email" name="email"></label>
-      <label>File (JPG/PNG/PDF) <input type="file" name="file" accept="image/*,application/pdf" required></label>
-      <label><input type="checkbox" name="consent" value="true" required> I consent to submit this work.</label>
-      <button type="submit">Submit</button>
-    </form>
+      <!-- MAINTAIN: upload form -->
+      <form id="form" enctype="multipart/form-data" novalidate>
+        <div class="row">
+          <div>
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" required />
+          </div>
+          <div>
+            <label for="class">Class</label>
+            <input id="class" name="class" type="text" required />
+          </div>
+        </div>
 
-    <div class="status" id="status"></div>
+        <label for="title">Title</label>
+        <input id="title" name="title" type="text" required />
+
+        <label for="description">Description</label>
+        <textarea id="description" name="description" rows="4" placeholder="Optional notes about the artwork…"></textarea>
+
+        <label for="email">Email (optional)</label>
+        <input id="email" name="email" type="email" inputmode="email" autocomplete="email" />
+
+        <label for="file">File (JPG/PNG/PDF)</label>
+        <input id="file" name="file" type="file" accept="image/*,application/pdf" required />
+
+        <label class="muted"><input id="consent" name="consent" type="checkbox" value="true" required />
+          I consent to submit this work for school collection and internal display.</label>
+
+        <div class="actions">
+          <button class="primary" type="submit">Submit</button>
+          <a id="btnCsv" class="btn" href="#" role="button">Download CSV</a>
+          <button type="button" class="btn" id="btnRefresh">Refresh total</button>
+        </div>
+        <div id="status" class="status" aria-live="polite"></div>
+
+        <div class="hr"></div>
+        <p class="hint">
+          If you see a network error, ensure the API URL below is your exact Google Apps Script
+          <code class="small">/exec</code> URL and that the deployment access is set to
+          <strong>Anyone</strong>.
+        </p>
+        <p class="hint">API: <code class="small" id="apiEcho"></code></p>
+      </form>
+    </div>
   </div>
 
   <script>
-    const API = 'YOUR_WEB_APP_URL'; // e.g. https://script.google.com/macros/s/AKfyc.../exec
+    /* MAINTAIN: paste your exact Web App /exec URL between the quotes (no spaces, no ellipsis) */
+    const API = 'YOUR_EXEC_URL_HERE'.trim();
+
+    // ---- Diagnostics to catch common mistakes ----
+    (function validateApi(){
+      const echo = document.getElementById('apiEcho');
+      echo.textContent = API;
+      try {
+        const u = new URL(API);
+        if (!u.pathname.endsWith('/exec')) throw new Error('URL must end with /exec');
+      } catch (err) {
+        alert('Invalid API URL. Please paste the exact Web App /exec URL.\n\n' + err);
+      }
+    })();
+
+    // ---- UI helpers ----
+    const $ = (id) => document.getElementById(id);
 
     async function refreshCount(){
+      const badge = $('count');
       try{
-        const r = await fetch(API + '?action=count', {cache:'no-store'});
-        const j = await r.json();
-        document.getElementById('count').textContent = 'Total submissions: ' + (j.count ?? 0);
-      }catch(e){
-        document.getElementById('count').textContent = 'Total submissions: (failed to load)';
+        const r = await fetch(API + '?action=count', { cache: 'no-store' });
+        const text = await r.text();               // read raw first for easier debugging
+        let data;
+        try { data = JSON.parse(text); }
+        catch { throw new Error('Non-JSON response:\n' + text.slice(0, 200)); }
+        if (data && data.ok) {
+          badge.textContent = `Total submissions: ${data.count ?? 0}`;
+        } else {
+          throw new Error(data && data.error ? data.error : 'Unknown error');
+        }
+      } catch (e) {
+        badge.textContent = 'Total submissions: (failed to load)';
+        console.error('Count error:', e);
       }
     }
 
-    document.getElementById('form').addEventListener('submit', async (e)=>{
+    $('btnRefresh').addEventListener('click', refreshCount);
+
+    $('btnCsv').addEventListener('click', (e)=>{
       e.preventDefault();
-      const fd = new FormData(e.target);
-      document.getElementById('status').textContent = 'Uploading…';
+      window.open(API + '?action=csv', '_blank');
+    });
+
+    $('form').addEventListener('submit', async (e)=>{
+      e.preventDefault();
+      const status = $('status');
+
+      // Simple front-end validation
+      const file = $('file').files[0];
+      if (!file) { status.textContent = 'Please choose a file.'; return; }
+
+      const fd = new FormData();
+      fd.append('name', $('name').value.trim());
+      fd.append('class', $('class').value.trim());
+      fd.append('title', $('title').value.trim());
+      fd.append('description', $('description').value.trim());
+      fd.append('email', $('email').value.trim());
+      fd.append('consent', $('consent').checked ? 'true' : 'false');
+      fd.append('file', file, file.name);
+
+      status.textContent = 'Uploading…';
       try{
         const r = await fetch(API, { method:'POST', body: fd });
-        const j = await r.json();
-        if(j.ok){
-          document.getElementById('status').innerHTML = 'Uploaded. <a target="_blank" href="'+j.fileUrl+'">Open file</a>';
+        const text = await r.text();               // debug-friendly
+        let data;
+        try { data = JSON.parse(text); }
+        catch { throw new Error('Non-JSON response:\n' + text.slice(0, 200)); }
+
+        if (data.ok){
+          status.innerHTML = 'Uploaded. File link: <a target="_blank" rel="noopener" href="' + data.fileUrl + '">Open</a>';
           e.target.reset();
-          refreshCount();
-        }else{
-          document.getElementById('status').textContent = 'Failed: ' + (j.error || 'Unknown error');
+          await refreshCount();
+        } else {
+          status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
         }
-      }catch(err){
-        document.getElementById('status').textContent = 'Network error: ' + err;
+      } catch (err){
+        status.textContent = 'Network error: ' + err.message;
+        console.error('POST error:', err);
       }
     });
 
+    // initial load
     refreshCount();
   </script>
 </body>
