--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- MAINTAIN: Fancy Pony - single-file upload page wired to Google Apps Script -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Fancy Pony</title>
   <style>
-    /* MAINTAIN: minimal, accessible, print-safe styles */
     :root { --w: 720px; --bd:#e5e7eb; --fg:#111827; --muted:#6b7280; --accent:#111827; }
     * { box-sizing: border-box; }
     body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); margin:0; }
@@ -32,9 +30,8 @@
     .count { font-weight:600; margin: 4px 0 18px; }
     .badge { display:inline-block; padding:2px 8px; border:1px solid var(--bd); border-radius:999px; font-size:12px; color:var(--muted); }
     .hr { height:1px; background:var(--bd); margin:18px 0; }
-    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
     code.small { background:#f9fafb; border:1px solid var(--bd); padding:2px 6px; border-radius:6px; font-size:12px; }
-    .hint { font-size:13px; color:var(--muted); }
+    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
   </style>
 </head>
 <body>
@@ -46,7 +43,6 @@
         <span id="count" class="badge">Loading total…</span>
       </div>
 
-      <!-- MAINTAIN: upload form -->
       <form id="form" enctype="multipart/form-data" novalidate>
         <div class="row">
           <div>
@@ -82,40 +78,33 @@
         <div id="status" class="status" aria-live="polite"></div>
 
         <div class="hr"></div>
-        <p class="hint">
-          If you see a network error, ensure the API URL below is your exact Google Apps Script
-          <code class="small">/exec</code> URL and that the deployment access is set to
-          <strong>Anyone</strong>.
-        </p>
-        <p class="hint">API: <code class="small" id="apiEcho"></code></p>
+        <p class="muted">API URL: <code class="small" id="apiEcho"></code></p>
       </form>
     </div>
   </div>
 
   <script>
-    /* MAINTAIN: paste your exact Web App /exec URL between the quotes (no spaces, no ellipsis) */
-    const API = 'YOUR_EXEC_URL_HERE'.trim();
+    // ← REPLACE THIS with your exact /exec URL (no spaces, no ellipsis)
+    const API = 'https://script.google.com/macros/s/PASTE_YOUR_EXEC_URL/exec'.trim();
 
-    // ---- Diagnostics to catch common mistakes ----
-    (function validateApi(){
-      const echo = document.getElementById('apiEcho');
-      echo.textContent = API;
-      try {
-        const u = new URL(API);
-        if (!u.pathname.endsWith('/exec')) throw new Error('URL must end with /exec');
-      } catch (err) {
-        alert('Invalid API URL. Please paste the exact Web App /exec URL.\n\n' + err);
-      }
-    })();
+    // Echo API for sanity check
+    document.getElementById('apiEcho').textContent = API;
 
-    // ---- UI helpers ----
-    const $ = (id) => document.getElementById(id);
+    // Basic validation of API format
+    try {
+      const u = new URL(API);
+      if (!u.pathname.endsWith('/exec')) throw new Error('API must end with /exec');
+    } catch (err) {
+      alert('Invalid API URL. Paste the exact Web App /exec URL.\n\n' + err);
+    }
+
+    const $ = id => document.getElementById(id);
 
     async function refreshCount(){
       const badge = $('count');
       try{
         const r = await fetch(API + '?action=count', { cache: 'no-store' });
-        const text = await r.text();               // read raw first for easier debugging
+        const text = await r.text(); // read raw first for easier debugging
         let data;
         try { data = JSON.parse(text); }
         catch { throw new Error('Non-JSON response:\n' + text.slice(0, 200)); }
@@ -141,7 +130,6 @@
       e.preventDefault();
       const status = $('status');
 
-      // Simple front-end validation
       const file = $('file').files[0];
       if (!file) { status.textContent = 'Please choose a file.'; return; }
 
@@ -156,8 +144,9 @@
 
       status.textContent = 'Uploading…';
       try{
+        // IMPORTANT: no custom headers — keeps it a simple POST (no preflight)
         const r = await fetch(API, { method:'POST', body: fd });
-        const text = await r.text();               // debug-friendly
+        const text = await r.text(); // show raw on failure
         let data;
         try { data = JSON.parse(text); }
         catch { throw new Error('Non-JSON response:\n' + text.slice(0, 200)); }
@@ -175,7 +164,7 @@
       }
     });
 
-    // initial load
+    // Initial load
     refreshCount();
   </script>
 </body>
