--- a/index.html
+++ b/index.html
@@ -1,160 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- MAINTAIN: Fancy Pony – single-file upload wired to Apps Script -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fancy Pony</title>
-  <style>
-    /* MAINTAIN: minimal, accessible styles */
-    :root { --w: 720px; --bd:#e5e7eb; --fg:#111827; --muted:#6b7280; --accent:#111827; }
-    * { box-sizing: border-box; }
-    body { font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); margin:0; }
-    .wrap { max-width: var(--w); margin: 40px auto; padding: 0 16px; }
-    .card { border:1px solid var(--bd); border-radius:16px; padding:20px; box-shadow:0 1px 3px rgba(0,0,0,.04); }
-    h1 { margin:0 0 12px; font-size:28px; letter-spacing:.2px; }
-    .sub { color:var(--muted); margin:0 0 16px; }
-    .row { display:grid; grid-template-columns: 1fr 1fr; gap:12px; }
-    label { display:block; margin:12px 0 6px; font-weight:600; }
-    input[type=text], input[type=email], textarea { width:100%; padding:10px; border:1px solid var(--bd); border-radius:10px; font:inherit; }
-    input[type=file]{ margin:8px 0 12px; }
-    textarea { resize: vertical; }
-    .muted { color:var(--muted); font-size:13px; }
-    .actions { display:flex; flex-wrap:wrap; gap:10px; margin-top:14px; }
-    button, .btn { appearance:none; border:1px solid var(--bd); background:#fff; color:var(--fg); padding:10px 16px; border-radius:10px; cursor:pointer; text-decoration:none; display:inline-flex; align-items:center; gap:8px; }
-    button.primary { background:var(--accent); color:#fff; border-color:var(--accent); }
-    .status { margin-top:12px; min-height:22px; }
-    .badge { display:inline-block; padding:2px 8px; border:1px solid var(--bd); border-radius:999px; font-size:12px; color:var(--muted); }
-    @media (max-width:640px){ .row{ grid-template-columns:1fr; } }
-    code.small { background:#f9fafb; border:1px solid var(--bd); padding:2px 6px; border-radius:6px; font-size:12px; }
-  </style>
+<meta charset="UTF-8">
+<title>Fancy Pony – Art Submission</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 2rem; background: #fafafa; }
+  h1 { color: #333; }
+  form { background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+  label { display: block; margin-top: 0.5rem; }
+  input, textarea { width: 100%; padding: 0.5rem; margin-top: 0.2rem; border: 1px solid #ccc; border-radius: 4px; }
+  button { margin-top: 1rem; padding: 0.6rem 1rem; background: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; }
+  button:hover { background: #45a049; }
+  #status { margin-top: 1rem; }
+  .success { padding:8px 10px; border:1px solid #e5e7eb; border-radius:8px; display:inline-block; margin-bottom:6px; background:#f0fff0; }
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="card" role="region" aria-label="Fancy Pony Submission">
-      <h1>Fancy Pony</h1>
-      <p class="sub">Artwork Submission</p>
-      <p><span id="count" class="badge">Loading total…</span></p>
 
-      <!-- MAINTAIN: upload form -->
-      <form id="form" novalidate>
-        <div class="row">
-          <div>
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text" required />
-          </div>
-          <div>
-            <label for="class">Class</label>
-            <input id="class" name="class" type="text" required />
-          </div>
-        </div>
+<!-- ===================== HEADER ===================== -->
+<h1>Fancy Pony – Art Submission</h1>
+<p>Please fill in the form below to submit your artwork. If you provide your email, we will send a confirmation message.</p>
 
-        <label for="title">Title</label>
-        <input id="title" name="title" type="text" required />
+<!-- ===================== SUBMISSION FORM ===================== -->
+<form id="uploadForm">
+  <label for="name">Your Name:</label>
+  <input type="text" id="name" name="name" required>
 
-        <label for="description">Description</label>
-        <textarea id="description" name="description" rows="4" placeholder="Optional notes about the artwork…"></textarea>
+  <label for="class">Class:</label>
+  <input type="text" id="class" name="class" required>
 
-        <label for="email">Email (optional)</label>
-        <input id="email" name="email" type="email" inputmode="email" autocomplete="email" />
+  <label for="title">Artwork Title:</label>
+  <input type="text" id="title" name="title">
 
-        <label for="file">File (JPG/PNG/PDF)</label>
-        <input id="file" name="file" type="file" accept="image/*,application/pdf" required />
+  <label for="description">Description:</label>
+  <textarea id="description" name="description"></textarea>
 
-        <label class="muted"><input id="consent" name="consent" type="checkbox" value="true" required />
-          I consent to submit this work for school collection and internal display.</label>
+  <label for="email">Email (for confirmation):</label>
+  <input type="email" id="email" name="email">
 
-        <div class="actions">
-          <button class="primary" type="submit">Submit</button>
-          <a id="btnCsv" class="btn" href="#" role="button">Download CSV</a>
-          <button type="button" class="btn" id="btnRefresh">Refresh total</button>
-        </div>
-        <div id="status" class="status" aria-live="polite"></div>
+  <label for="file">Choose File (JPG / PNG / PDF) – Please scan at 150–300 ppi:</label>
+  <input type="file" id="file" name="file" accept=".jpg,.jpeg,.png,.pdf" required>
 
-        <p class="muted">API URL: <code class="small" id="apiEcho"></code></p>
-      </form>
-    </div>
-  </div>
+  <label>
+    <input type="checkbox" id="consent" name="consent" value="true" required>
+    I confirm that I have the rights to submit this work.
+  </label>
 
-  <script>
-    /* ===== MAINTAIN: SET YOUR /exec URL ===== */
-    const API = 'https://script.google.com/macros/s/AKfycb.../exec'.trim(); // <— replace
-    document.getElementById('apiEcho').textContent = API;
+  <button type="submit">Submit</button>
+</form>
 
-    /* ===== MAINTAIN: HELPERS ===== */
-    const $ = id => document.getElementById(id);
-    function fileToBase64(file){
-      return new Promise((resolve, reject)=>{
-        const fr = new FileReader();
-        fr.onload = () => {
-          const s = String(fr.result || '');
-          const i = s.indexOf('base64,');
-          resolve(i >= 0 ? s.slice(i + 7) : s);
-        };
-        fr.onerror = () => reject(fr.error || new Error('File read error'));
-        fr.readAsDataURL(file);
-      });
+<!-- ===================== STATUS + COUNT ===================== -->
+<div id="status"></div>
+<div id="countContainer">
+  <strong>Total submissions:</strong> <span id="count">Loading...</span>
+  <button id="refreshBtn" type="button">Refresh total</button>
+</div>
+
+<!-- ===================== SCRIPT ===================== -->
+<script>
+  // ===== CONFIG =====
+  const SCRIPT_URL = 'YOUR_DEPLOYED_WEB_APP_URL'; // Do NOT display this in the page.
+
+  function $(id){ return document.getElementById(id); }
+
+  async function refreshCount(){
+    try {
+      const res = await fetch(`${SCRIPT_URL}?action=count`);
+      const data = await res.json();
+      if (data.ok) $('count').textContent = data.count;
+      else $('count').textContent = 'Error';
+    } catch (err) {
+      $('count').textContent = 'Error';
     }
+  }
 
-    /* ===== MAINTAIN: COUNTER ===== */
-    async function refreshCount(){
-      const badge = $('count');
-      try{
-        const r = await fetch(API + '?action=count', { cache: 'no-store' });
-        const txt = await r.text();
-        const j = JSON.parse(txt);
-        badge.textContent = `Total submissions: ${j.count ?? 0}`;
-      }catch(e){
-        badge.textContent = 'Total submissions: (failed to load)';
-        console.error('Count error:', e);
+  $('refreshBtn').addEventListener('click', refreshCount);
+
+  document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const status = $('status');
+    status.textContent = 'Uploading...';
+
+    const formData = new FormData(e.target);
+    try {
+      const res = await fetch(SCRIPT_URL, { method: 'POST', body: formData });
+      const data = await res.json();
+
+      if (data.ok){
+        const userEmail = $('email').value.trim();
+        const line =
+          userEmail
+            ? 'You have successfully uploaded. A confirmation email has been sent.'
+            : 'You have successfully uploaded.';
+        status.innerHTML =
+          `<div class="success">${line}</div>
+           <div>File link: <a target="_blank" rel="noopener" href="${data.fileUrl}">Open</a></div>`;
+        e.target.reset();
+        await refreshCount();
+      } else {
+        status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
       }
+    } catch (err) {
+      status.textContent = 'Error: ' + err.message;
     }
-    $('btnRefresh').addEventListener('click', refreshCount);
-    $('btnCsv').addEventListener('click', (e)=>{ e.preventDefault(); window.open(API + '?action=csv', '_blank'); });
+  });
 
-    /* ===== MAINTAIN: SUBMIT ===== */
-    $('form').addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      const status = $('status');
-      const file = $('file').files[0];
-      if (!file) { status.textContent = 'Please choose a file.'; return; }
+  // Load count on page load
+  refreshCount();
+</script>
 
-      status.textContent = 'Preparing upload…';
-      try{
-        const fd = new FormData();
-        fd.append('name', $('name').value.trim());
-        fd.append('class', $('class').value.trim());
-        fd.append('title', $('title').value.trim());
-        fd.append('description', $('description').value.trim());
-        fd.append('email', $('email').value.trim());
-        fd.append('consent', $('consent').checked ? 'true' : 'false');
-
-        // Send file via base64 fields (stable with Apps Script)
-        const b64 = await fileToBase64(file);
-        fd.append('filebase64', b64);
-        fd.append('mimetype', file.type || 'application/octet-stream');
-        fd.append('filename', file.name || 'upload.bin');
-
-        status.textContent = 'Uploading…';
-        const r = await fetch(API, { method:'POST', body: fd }); // no custom headers
-        const txt = await r.text();
-        const data = JSON.parse(txt);
-
-        if (data.ok){
-          status.innerHTML = 'Uploaded. File link: <a target="_blank" rel="noopener" href="' + data.fileUrl + '">Open</a><br><span class="muted">A confirmation email was sent if an email address was provided.</span>';
-          e.target.reset();
-          await refreshCount();
-        } else {
-          status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
-        }
-      } catch(err){
-        status.textContent = 'Upload failed: ' + err.message;
-        console.error('POST error:', err);
-      }
-    });
-
-    // Initial load
-    refreshCount();
-  </script>
 </body>
 </html>
