--- a/index.html
+++ b/index.html
@@ -1,113 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Fancy Pony – Art Submission</title>
 <style>
   body { font-family: Arial, sans-serif; margin: 2rem; background: #fafafa; }
   h1 { color: #333; }
   form { background: #fff; padding: 1rem; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
-  label { display: block; margin-top: 0.5rem; }
-  input, textarea { width: 100%; padding: 0.5rem; margin-top: 0.2rem; border: 1px solid #ccc; border-radius: 4px; }
-  button { margin-top: 1rem; padding: 0.6rem 1rem; background: #4CAF50; color: white; border: none; border-radius: 4px; cursor: pointer; }
+  label { display: block; margin-top: .5rem; }
+  /* Only widen text/email/file/textarea – DO NOT affect checkboxes */
+  input[type="text"], input[type="email"], input[type="file"], textarea {
+    width: 100%; padding: .5rem; margin-top: .2rem; border: 1px solid #ccc; border-radius: 4px;
+  }
+  input[type="checkbox"] { width: auto; margin-right: .5rem; vertical-align: middle; }
+  button { margin-top: 1rem; padding: .6rem 1rem; background: #4CAF50; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
   button:hover { background: #45a049; }
   #status { margin-top: 1rem; }
   .success { padding:8px 10px; border:1px solid #e5e7eb; border-radius:8px; display:inline-block; margin-bottom:6px; background:#f0fff0; }
 </style>
 </head>
 <body>
+  <h1>Fancy Pony – Art Submission</h1>
+  <p>Please fill in the form below to submit your artwork. If you provide your email, we will send a confirmation message.</p>
 
-<!-- ===================== HEADER ===================== -->
-<h1>Fancy Pony – Art Submission</h1>
-<p>Please fill in the form below to submit your artwork. If you provide your email, we will send a confirmation message.</p>
+  <form id="uploadForm" novalidate>
+    <label for="name">Your Name:</label>
+    <input id="name" name="name" type="text" required />
 
-<!-- ===================== SUBMISSION FORM ===================== -->
-<form id="uploadForm">
-  <label for="name">Your Name:</label>
-  <input type="text" id="name" name="name" required>
+    <label for="class">Class:</label>
+    <input id="class" name="class" type="text" required />
 
-  <label for="class">Class:</label>
-  <input type="text" id="class" name="class" required>
+    <label for="title">Artwork Title:</label>
+    <input id="title" name="title" type="text" />
 
-  <label for="title">Artwork Title:</label>
-  <input type="text" id="title" name="title">
+    <label for="description">Description:</label>
+    <textarea id="description" name="description" rows="4"></textarea>
 
-  <label for="description">Description:</label>
-  <textarea id="description" name="description"></textarea>
+    <label for="email">Email (for confirmation):</label>
+    <input id="email" name="email" type="email" />
 
-  <label for="email">Email (for confirmation):</label>
-  <input type="email" id="email" name="email">
+    <label for="file">Choose File (JPG / PNG / PDF) – Please scan at 150–300 ppi:</label>
+    <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
 
-  <label for="file">Choose File (JPG / PNG / PDF) – Please scan at 150–300 ppi:</label>
-  <input type="file" id="file" name="file" accept=".jpg,.jpeg,.png,.pdf" required>
+    <label>
+      <input id="consent" name="consent" type="checkbox" value="true" required />
+      I confirm that I have the rights to submit this work.
+    </label>
 
-  <label>
-    <input type="checkbox" id="consent" name="consent" value="true" required>
-    I confirm that I have the rights to submit this work.
-  </label>
+    <button type="submit">Submit</button>
+  </form>
 
-  <button type="submit">Submit</button>
-</form>
+  <div id="status"></div>
+  <div style="margin-top: .5rem;">
+    <strong>Total submissions:</strong> <span id="count">Loading...</span>
+    <button id="refreshBtn" type="button">Refresh total</button>
+  </div>
 
-<!-- ===================== STATUS + COUNT ===================== -->
-<div id="status"></div>
-<div id="countContainer">
-  <strong>Total submissions:</strong> <span id="count">Loading...</span>
-  <button id="refreshBtn" type="button">Refresh total</button>
-</div>
-
-<!-- ===================== SCRIPT ===================== -->
 <script>
-  // ===== CONFIG =====
-  const SCRIPT_URL = 'YOUR_DEPLOYED_WEB_APP_URL'; // Do NOT display this in the page.
+  // -------- SET THIS to your exact Web App /exec URL --------
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxsLbUN-3aqmAWSyuxAkmsmUvi77DfE8lQgkIKSJzGEdR4MkSpH3JL1OrAgyZ4aM_M_/exec'.trim();
 
-  function $(id){ return document.getElementById(id); }
+  const $ = (id) => document.getElementById(id);
+
+  // Convert File → base64 (strip data URL prefix)
+  function fileToBase64(file){
+    return new Promise((resolve, reject)=>{
+      const fr = new FileReader();
+      fr.onload = () => {
+        const s = String(fr.result || '');
+        const i = s.indexOf('base64,');
+        resolve(i >= 0 ? s.slice(i + 7) : s);
+      };
+      fr.onerror = () => reject(fr.error || new Error('File read error'));
+      fr.readAsDataURL(file);
+    });
+  }
 
   async function refreshCount(){
-    try {
-      const res = await fetch(`${SCRIPT_URL}?action=count`);
-      const data = await res.json();
-      if (data.ok) $('count').textContent = data.count;
-      else $('count').textContent = 'Error';
-    } catch (err) {
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=count', { cache: 'no-store' });
+      const j = await r.json();
+      $('count').textContent = j.ok ? (j.count ?? 0) : 'Error';
+    }catch{
       $('count').textContent = 'Error';
     }
   }
-
   $('refreshBtn').addEventListener('click', refreshCount);
 
-  document.getElementById('uploadForm').addEventListener('submit', async (e) => {
+  $('uploadForm').addEventListener('submit', async (e)=>{
     e.preventDefault();
     const status = $('status');
-    status.textContent = 'Uploading...';
+    status.textContent = 'Preparing upload…';
 
-    const formData = new FormData(e.target);
-    try {
-      const res = await fetch(SCRIPT_URL, { method: 'POST', body: formData });
-      const data = await res.json();
+    const file = $('file').files[0];
+    if (!file){ status.textContent = 'Please choose a file.'; return; }
+
+    try{
+      // Build FormData with text fields + base64 file fields
+      const fd = new FormData();
+      fd.append('name', $('name').value.trim());
+      fd.append('class', $('class').value.trim());
+      fd.append('title', $('title').value.trim());
+      fd.append('description', $('description').value.trim());
+      fd.append('email', $('email').value.trim());
+      fd.append('consent', $('consent').checked ? 'true' : 'false');
+
+      const b64 = await fileToBase64(file);
+      fd.append('filebase64', b64);
+      fd.append('mimetype', file.type || 'application/octet-stream');
+      fd.append('filename', file.name || 'upload.bin');
+
+      status.textContent = 'Uploading…';
+      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); // no custom headers
+      const txt = await r.text();
+      const data = JSON.parse(txt);
 
       if (data.ok){
         const userEmail = $('email').value.trim();
-        const line =
-          userEmail
-            ? 'You have successfully uploaded. A confirmation email has been sent.'
-            : 'You have successfully uploaded.';
+        const line = userEmail
+          ? 'You have successfully uploaded. A confirmation email has been sent.'
+          : 'You have successfully uploaded.';
         status.innerHTML =
           `<div class="success">${line}</div>
            <div>File link: <a target="_blank" rel="noopener" href="${data.fileUrl}">Open</a></div>`;
         e.target.reset();
         await refreshCount();
-      } else {
+      }else{
         status.textContent = 'Upload failed: ' + (data.error || 'Unknown error');
       }
-    } catch (err) {
+    }catch(err){
       status.textContent = 'Error: ' + err.message;
+      console.error(err);
     }
   });
 
-  // Load count on page load
+  // Initial load
   refreshCount();
 </script>
-
 </body>
 </html>
