--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
 
 <script>
-  const SCRIPT_URL = 'YOUR_EXEC_URL_HERE'.trim();
+  const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbxsLbUN-3aqmAWSyuxAkmsmUvi77DfE8lQgkIKSJzGEdR4MkSpH3JL1OrAgyZ4aM_M_/exec'.trim();
   const $ = (id) => document.getElementById(id);
 
   function fileToBase64(file){
